--- a/src/button.css
+++ b/src/button.css
@@ -22,7 +22,7 @@
 
 .-btn:hover {
 	background-color: #fff;
-	box-shadow: 0 3px 6px hsla(0, 0%, 0%, .3);
+	box-shadow: 0 2px 6px hsla(0, 0%, 0%, .3);
 	transform: translate3d(0, -1px, 0);
 }
 
