--- a/src/hint.css
+++ b/src/hint.css
@@ -19,7 +19,7 @@
 	padding: 4px 12px;
 	border-radius: 2px;
 	background-color: #000;
-	box-shadow: 0 2px 6px rgba(0, 0, 0, .5);
+	box-shadow: 0 2px 6px hsla(0, 0%, 0%, .3);
 	color: #fff;
 	content: attr(data-hint);
 	text-align: center;
