--- a/src/tooltip.css
+++ b/src/tooltip.css
@@ -7,7 +7,7 @@
 	border: 2px solid hsl(0, 0%, 60%);
 	border-radius: 2px;
 	background-color: #fff;
-	box-shadow: 0 2px 6px rgba(0, 0, 0, .3);
+	box-shadow: 0 2px 6px hsla(0, 0%, 0%, .3);
 	white-space: nowrap;
 }
 
